--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.0.8",
+    "astro": "4.4.0",
     "typescript": "5.3.3",
     "@astrojs/mdx": "2.0.3",
-    "@builder-os/astro": "0.4.6",
+    "@builder-os/astro": "0.5.6",
     "sharp": "0.33.2",
     "@astrojs/vercel": "7.3.0"
   }
